# ockam

./: Cargo.toml  Cross.toml  NOTICE.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTORS.csv
.github/actions/build_binaries/: action.yml
.github/workflows/: all.yml  osv-scanner.yml  release-draft-binaries.yml  release-ockam-package.yml  rust.yml  scorecards.yml  typos.yml
examples/rust/get_started/examples/: 11-attribute-based-authentication-control-plane.rs  11-attribute-based-authentication-edge-plane.rs  bob.rs
examples/rust/get_started/src/: echoer.rs  hop.rs  logger.rs  relay.rs  token.rs
examples/rust/get_started/tests/: tests.rs
implementations/elixir/ockam/ockam_cloud_node/: mix.exs
implementations/elixir/ockam/ockam_metrics/: mix.exs
implementations/rust/: performance-guideline.md
implementations/rust/ockam/ockam/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_abac/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
implementations/rust/ockam/ockam_app_lib/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_app_lib/src/: log.rs
implementations/rust/ockam/ockam_app_lib/src/enroll/: enroll_user.rs
implementations/rust/ockam/ockam_app_lib/src/shared_service/relay/: create.rs
implementations/rust/ockam/ockam_app_lib/src/shared_service/tcp_outlet/: create.rs  invitation_access_control.rs
implementations/rust/ockam/ockam_app_lib/src/state/: mod.rs  model_state_repository.rs  model_state_repository_sql.rs
implementations/rust/ockam/ockam_command/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_core/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_ebpf/: CHANGELOG.md  Cargo.toml  ockam_ebpf
implementations/rust/ockam/ockam_executor/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_identity/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_macros/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_multiaddr/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_node/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_rust_elixir_nifs/: Cargo.toml
implementations/rust/ockam/ockam_transport_tcp/: CHANGELOG.md  Cargo.toml  README.md  build.rs
implementations/rust/ockam/ockam_transport_tcp/src/: lib.rs  transport_message.rs
implementations/rust/ockam/ockam_transport_tcp/src/ebpf_portal/: ebpf_support.rs  mod.rs  portals.rs  transport.rs
implementations/rust/ockam/ockam_transport_tcp/src/ebpf_portal/raw_socket/: async_fd_packet_reader.rs  async_fd_packet_writer.rs  checksum_helpers.rs  common.rs  create_raw_socket.rs  packet.rs  packet_binary.rs  packet_reader_trait.rs  packet_writer_trait.rs
implementations/rust/ockam/ockam_transport_tcp/src/ebpf_portal/registry/: inlet.rs  outlet.rs
implementations/rust/ockam/ockam_transport_tcp/src/ebpf_portal/workers/: internal_processor.rs  mod.rs  raw_socket_processor.rs  remote_worker.rs
implementations/rust/ockam/ockam_transport_tcp/src/portal/: addresses.rs  inlet_listener.rs  inlet_shared_state.rs  interceptor.rs  options.rs  outlet_listener.rs  portal_message.rs  portal_receiver.rs  portal_worker.rs  tls_certificate.rs
implementations/rust/ockam/ockam_transport_tcp/src/privileged_portal/: ebpf_support.rs  mod.rs  privileged_portals.rs  transport.rs
implementations/rust/ockam/ockam_transport_tcp/src/privileged_portal/raw_socket/: async_fd_packet_reader.rs  async_fd_packet_writer.rs  checksum.rs  checksum_helpers.rs  common.rs  create_raw_socket.rs  mod.rs  packet.rs  packet_reader_trait.rs  packet_writer_trait.rs
implementations/rust/ockam/ockam_transport_tcp/src/privileged_portal/registry/: inlet.rs  outlet.rs
implementations/rust/ockam/ockam_transport_tcp/src/privileged_portal/workers/: internal_processor.rs  raw_socket_processor.rs  remote_worker.rs
implementations/rust/ockam/ockam_transport_tcp/src/transport/: common.rs  connection.rs  lifecycle.rs  listener.rs  mod.rs  portals.rs
implementations/rust/ockam/ockam_transport_tcp/src/workers/: listener.rs  receiver.rs  sender.rs
implementations/rust/ockam/ockam_transport_tcp/tests/: ebpf_portal.rs  interceptor.rs  lifecycle.rs  portal.rs
implementations/rust/ockam/ockam_transport_udp/: CHANGELOG.md  Cargo.toml  README.md
implementations/rust/ockam/ockam_transport_udp/src/: error.rs  lib.rs  options.rs  size_options.rs
implementations/rust/ockam/ockam_transport_udp/src/messages/: routing_message.rs  routing_number.rs  transport_message.rs
implementations/rust/ockam/ockam_transport_udp/src/puncture/negotiation/: listener.rs  negotiation.rs
implementations/rust/ockam/ockam_transport_udp/src/puncture/puncture/: puncture.rs  receiver.rs  sender.rs
implementations/rust/ockam/ockam_transport_udp/src/puncture/rendezvous_service/: rendezvous.rs
implementations/rust/ockam/ockam_transport_udp/src/transport/: bind.rs  lifecycle.rs  puncture.rs
implementations/rust/ockam/ockam_transport_udp/src/workers/: mod.rs  receiver.rs  sender.rs
implementations/rust/ockam/ockam_transport_udp/src/workers/pending_messages/: mod.rs  peer_pending_routing_message_storage.rs  pending_message.rs  pending_routing_message_storage.rs  transport_messages_iterator.rs
implementations/rust/ockam/ockam_transport_udp/tests/: tests.rs
implementations/typescript/: package.json  pnpm-lock.yaml
tools/cargo-deny/: deny.toml
tools/docker/: README.md
tools/docker/ockam/: Dockerfile
tools/nix/: flake.nix
tools/nix/parts/: tooling.nix
tools/profile/: README.md  portal.allocations  portal.cpu  portal.memory_profile  portal_baseline  portal_relay.baseline  portal_relay.cpu  portal_two_nodes.baseline  portal_two_nodes.cpu
tools/stress-test/: Cargo.toml  README.md
tools/stress-test/src/: main.rs  portal_simulator.rs
tools/tcp-test/: Cargo.toml  README.md  deploy
tools/tcp-test/src/: main.rs  server.rs  tls.rs
tools/templates/: ockam.dockerfile
(+491 files in other folders)
