[package]
name = "tcp-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "env"] }
rcgen = { version = "0.13", features = ["pem", "aws_lc_rs"], default-features = false }
rustls = { version = "0.23" }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", features = ["aws-lc-rs"] }
