[package]
name = "ockam_app_lib"
version = "0.145.0"
authors = ["Ockam Developers"]
categories = [
  "cryptography",
  "asynchronous",
  "authentication",
  "network-programming",
  "embedded",
]
edition = "2021"
homepage = "https://github.com/ockam-network/ockam"
keywords = [
  "ockam",
  "crypto",
  "cryptography",
  "network-programming",
  "encryption",
]
license = "Apache-2.0"
publish = true
repository = "https://github.com/ockam-network/ockam/implementations/rust/ockam/ockam_app_lib"
description = "Ockam's desktop application library"

[lib]
name = "ockam_app_lib"
crate-type = ["staticlib"]
path = "src/lib.rs"

[features]
default = ["rust-crypto"]
aws-lc = ["ockam_api/aws-lc"]
rust-crypto = ["ockam_api/rust-crypto"]

[dependencies]
duct = "0.13.7"
miette = { version = "7.2.0", features = ["fancy-no-backtrace"] }
minicbor = { version = "0.25.1", default-features = false, features = ["alloc", "derive"] }
ockam = { path = "../ockam", version = "^0.145.0", features = ["software_vault"] }
ockam_api = { path = "../ockam_api", version = "0.88.0", default-features = false, features = ["std"] }
ockam_core = { path = "../ockam_core", version = "^0.122.0" }
ockam_multiaddr = { path = "../ockam_multiaddr", version = "0.67.0", features = ["cbor", "serde"] }
ockam_node = { path = "../ockam_node", version = "^0.135.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", default-features = false }
thiserror = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
ockam_api = { path = "../ockam_api", version = "0.88.0", default-features = false, features = ["test-utils"] }
tempfile = { version = "3.10.1" }

[build-dependencies]
cbindgen = { version = "0.26", default-features = false }
