[package]
name = "ockam_transport_udp"
version = "0.77.0"
authors = ["Ockam Developers"]
autoexamples = false
categories = [
  "cryptography",
  "asynchronous",
  "authentication",
  "network-programming",
  "embedded",
]

edition = "2021"
homepage = "https://github.com/ockam-network/ockam"
keywords = ["ockam", "crypto", "network", "networking", "udp"]
license = "Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/ockam-network/ockam/implementations/rust/ockam/ockam_transport_udp"
rust-version = "1.70.0"
description = """
UDP Transport for the Ockam Routing Protocol.
"""

[features]
default = ["std"]
std = ["ockam_macros/std", "minicbor/std"]
alloc = ["minicbor/alloc"]

[dependencies]
cfg-if = "1.0.0"
minicbor = { version = "0.25.1", default-features = false, features = ["derive"] }
ockam_core = { path = "../ockam_core", version = "^0.122.0", default-features = false }
ockam_node = { path = "../ockam_node", version = "^0.135.0" }
ockam_transport_core = { path = "../ockam_transport_core", version = "^0.99.0" }
rand = "0.8"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "sync", "net", "macros", "time", "io-util"] }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
ockam_macros = { path = "../ockam_macros", version = "^0.36.0" }
